sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value i
i=0
^AlgCombSort:9: error: not found: value i
while (i+ecart<lg) {if (i<i+ecart){
       ^AlgCombSort:9: error: not found: value i
while (i+ecart<lg) {if (i<i+ecart){
                        ^AlgCombSort:11: error: not found: value i
	i=i+1
        ^